[project]
name = "symbology-server"
version = "0.1.0"
description = "HTTP symbology server for managing symbol and identifier mappings"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.128",
  "uvicorn>=0.39",
  "pydantic>=2.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "httpx>=0.28",
]